@@ -20,6 +20,6 @@ EBUILD inkscape-0.92.4-r1.ebuild 3837 BLAKE2B 824d93b7e5e4ac512d2e0e212e9edff705
 EBUILD inkscape-0.92.4-r2.ebuild 4030 BLAKE2B 8ef89aa161c062de37db4ec61f01252ecd3b3a44c2dbd9634ac9cc784fb46bbc8b84f9b3e6cb4c83467dfe08028df6deb5c74bf53750214ffac5e0d11132d674 SHA512 f125a0b08e08dc1b1816eaca4b7fac3b39ec7b0fe552b0f6412051ed5e5bf822130d0df68111849310e942a41b99b9854977f2883e655ff3b35d895cc379380c
 EBUILD inkscape-0.92.4-r3.ebuild 4909 BLAKE2B 7a6d3067440d3553391f40a122486c0abc266d81052fde546cb64a3ab9e2c01366c752bcdb945b1cd627659209788d42ee8189c70220cab602c32de6db4fe019 SHA512 c050faf65ceb199ceb6d425e9d364abcaf2b9d3c6cf1bec55e241a7ea784b8c02c2a429647112c110f691944fd00d4cf4769943abba9eff6a7cd2a26d8c1fa84
 EBUILD inkscape-0.92.4.ebuild 3809 BLAKE2B a126b4d8ea0fb1a78da4563821e0c417207378d4cce84acdc13acf907f563b75e25f34f9c2e26c4fa2411fdc7763bcf41282930a16e6bb8d6c0ff3ded2e56df8 SHA512 7787c362caa9f6d9b8fd87695ccdc0d3363db6a0ec0b62bdf68c8179e66dc954ee9a7439fcc0ad1e107298efa3fccbaebb32ace2e5e65722ac4d48f89ceec66b
-EBUILD inkscape-1.0.1.ebuild 4116 BLAKE2B 49b2eebd2e8c988da0cbac477dfa048dddaaaa4a924e1131cabc3b2010b1d50d025e9a9f198193c01a716bb7d64db818d3d4280acb2964f0a33d8b646f7b1d6d SHA512 87a35dd8e6b2f93f0829dc18ae2b84d859656fea640101273a251595442d937fcfd380c28b0f8c9dbe13185da31b063ceee196a538073599cf6f16821731fe1d
-MISC ChangeLog 918 BLAKE2B 2e7e97454495ff93aafd7c06bc05705f3a02e489f13b7146e9d959e9e9c958a0ea5ef222006a838e993a8c652a686a0c859396478346980ee5ba8d026459a44d SHA512 9b5f90c521e72d43c1fe6adbd27da4683f1102513b002c087374edc0ee2fb8d8ceb9a951b571c11ecda93413ef3061e97b9179c45245b33abf0935b0ee0bde00
+EBUILD inkscape-1.0.1.ebuild 4158 BLAKE2B a70afc0731783ee0379d06831a0a0fe26c5fa1c158f6e54f3a9983aa4f74c59d9bc2dcf7e5ee27168a30cf3fa62218d25e023628f610fc2a17cb0b11ffe97916 SHA512 0f7ed5ed50ca0f0260c1dd12d4d4de1a0a438594b4973eca0d8fe996b76f289f909c9e00b901156cdc7f06b311c1069526c9231f3aba6fb2515e434445aa6511
+MISC ChangeLog 1021 BLAKE2B 3e03c34b75f616947b6eb67817efedefe957d38554eb48db7120762af15675105278c8af2c3a15fe863205567bde141e7a89b376a4538b73f530ff1b2fa01ad9 SHA512 0bc9bd33bf84a73962151adf44995f16a3d640543ea9ec7ae710b7614d38ece46e86273ce5864e4c680d69b70110feee50549cda7a9d68b04a5d0d6f598f6c74
 MISC metadata.xml 946 BLAKE2B b4abc758db508bfb9a48de0fa62688b0ae4ae0a6631ce5b12a0ca92b5bcd8aadebc05ed783fc6a58dc3e349a04f2fab6de4499bdc02a4d820836b3c838cbc3d2 SHA512 6ee37a45f7147a082e2533c77d7851fbab01ab9c1fcb96ef6fe24d0f5a904713306426fe7dc0053059a88435e5e9ae7cd4daf34d6a25b5b2bf746c50c8ae5d6c
