@@ -1,6 +1,8 @@
 *inkscape-1.0.1*
 ::gentoo			move to python3, change to eapi7, change use flag order, update keywords, update dependencies
-::prototype99		improve use flag logic
+::prototype99
+-improve use flag logic
+-update dependencies according to https://wiki.inkscape.org/wiki/index.php?title=Tracking_Dependencies
 *inkscape-0.92.4-r3*
 ::dantrell-gnome	remove lxml and scour dependencies, add support for older glibmm, more advanced numpy dependency, uniconvertor use flag
 ::prototype99		make better use of has_version
